--- a/uslugi.html
+++ b/uslugi.html
@@ -54,31 +54,7 @@
     </header>
     <main class="main">
         <div class="container">
-            <h1>О компании</h1>
-            <p>Центр сертификации продукции «ИНСАЙТ» — крупнейшая сертификационная компания, работающая на рынке предоставления сертификационных услуг уже более десяти лет. За долгие годы работы мы смогли сформировать целую систему оказания содействия при получении разрешительной документации во всех областях оценки качества товаров и услуг в России и за ее пределами.</p>
-            <p>Принцип работы центра сертификации продукции «ИНСАЙТ» базируется на основных потребностях клиентов: удобство, скорость работы и профессионализм. Именно поэтому мы можем гарантировать нашим заказчикам быстрое получение документов, которые оформлены и зарегистрированы в соответствии с законодательством Российской Федерации и Таможенного союза.</p>
-            <p>Центр сертификации «ИНСАЙТ» проводит оценку соответствия продукции по следующим направлениям:</p>
-            <ul>
-                <li>оформление сертификатов и деклараций о соответствии в системе ГОСТ Р и на основании Техрегламентов Таможенного союза;</li>
-                <li>проверка безопасности изделий по их противопожарным характеристикам;</li>
-                <li>сертификация деятельности компаний по международным стандартам ISO;</li>
-                <li>оценка гигиенических и санитарно-эпидемиологических показателей продукции;</li>
-                <li>получение разрешительной документации в рамках промышленной безопасности;</li>
-                <li>оформление документов в системе контроля сварки (НАКС);</li>
-                <li>содействие компаниям при вступлении в СРО;</li>
-                <li>лицензирование деятельности, регулируемой МЧС;</li>
-                <li>и многие другие услуги.</li>
-            </ul>
-            <p>Если сложилась ситуация, когда вы не знаете, требуется ли какой-либо разрешительный документ для производства или ввоза продукции в страну, обратитесь к специалистам нашего центра любым удобным Вам способом, и мы определим необходимость сертификации товаров в самые короткие сроки. Наши центры сертификации продукции работают в разных уголках страны, поэтому сделать заказ и получить бесплатные консультации вы можете в любое время суток, просто позвоните нашим специалистам или оставьте свой запрос на сайте компании.</p>
-            <div class="form">
-                <form class="modal__form modal__form-js" action="#" method="post"></form>
-                <h3 class="form__title">Напишите свой вопрос и я напишу или перезвоню вам.</h3>
-                <div class="form__placeholder-container"><input type="text" placeholder=" " /><label>Имя</label></div>
-                <div class="form__placeholder-container"><input type="email" placeholder=" " required="required" /><label>Email</label></div>
-                <div class="form__placeholder-container"><input type="tel" placeholder=" " required="required" /><label>Телефон</label></div>
-                <div class="form__placeholder-container"><input type="text" placeholder=" " /><label>Город</label></div>
-                <div class="form__placeholder-container"><textarea type="text" placeholder=" " required="required"></textarea><label>Ваш вопрос</label></div><button class="button contacts__form-btn" type="submit">Отправить</button>
-            </div>
+            <h1>Наши услуги</h1>
         </div>
     </main>
     <div class="modal">
