--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="libs/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#fffff">
@@ -28,7 +29,7 @@
     <header class="header">
         <div class="container">
             <div class="header__top">
-                <div class="logo"><svg class="logo__img">
+                <div class="logo wow fadeInDown"><svg class="logo__img">
                         <use xlink:href="img/symbols.svg#logo"></use>
                     </svg></div>
                 <div class="burger burger-js"><span></span></div>
@@ -38,47 +39,47 @@
                             <div class="header__navigation-close-container"></div>
                         </div>
                         <ul>
-                            <li class="hvr-underline-from-center"> <a href="index.html">Главная</a></li>
-                            <li class="hvr-underline-from-center"> <a href="about.html">О компании</a></li>
-                            <li class="hvr-underline-from-center"><a href="uslugi.html">Наши услуги</a></li>
-                            <li class="hvr-underline-from-center"> <a href="contacts.html">Контакты</a></li>
+                            <li class="hvr-underline-from-center wow fadeInDown" data-wow-delay=".5s"> <a href="index.html">Главная</a></li>
+                            <li class="hvr-underline-from-center wow fadeInDown" data-wow-delay="1s"><a href="about.html">О компании</a></li>
+                            <li class="hvr-underline-from-center wow fadeInDown" data-wow-delay="1.5s"><a href="uslugi.html">Наши услуги</a></li>
+                            <li class="hvr-underline-from-center wow fadeInDown" data-wow-delay="2s"><a href="contacts.html">Контакты</a></li>
                         </ul>
                     </div>
                 </nav>
                 <div class="info">
-                    <p>Ежедневно 8:00 - 20:00</p><a href="tel:89132153140">8 (913) 215-3140</a><a href="tel:88005053953">8 (800) 505-3953 <span>(звонок бесплатный)</span></a>
-                </div><button class="button btn-open-modal-js">Консультация</button>
+                    <p class="wow fadeInDown" data-wow-delay=".5s">Ежедневно 8:00 - 20:00</p><a class="wow fadeInDown" href="tel:89132153140" data-wow-delay="1s">8 (913) 215-3140</a><a class="wow fadeInDown" href="tel:88005053953" data-wow-delay="1.5s">8 (800) 505-3953 <span>(звонок бесплатный)</span></a>
+                </div><button class="button btn-open-modal-js wow fadeInDown">Консультация</button>
             </div>
         </div>
     </header>
     <main class="main">
         <div class="container">
             <section class="services">
-                <h2>Основные услуги</h2>
-                <ul class="services__tabs-js">
-                    <li class="hvr-wobble-top services__tab-js" data-services="1"> <img class="services__img" src="img/content/consultation.png" alt="Консультация специалиста" />Консультация специалиста</li>
-                    <li class="hvr-wobble-top services__tab-js" data-services="2"> <img class="services__img" src="img/content/documents.png" alt="Оформление документов" />Оформление документов</li>
-                    <li class="hvr-wobble-top services__tab-js" data-services="3"> <img class="services__img" src="img/content/receiving.png" alt="Получение сертификата" />Получение сертификата</li>
+                <h2 class="wow fadeInDown" data-wow-delay=".5s">Основные услуги</h2>
+                <ul class="wow fadeInDown services__tabs-js" data-wow-delay="1s">
+                    <li class="hvr-wobble-top services__tab-js" data-services="1"><img class="services__img" src="img/content/consultation.png" alt="Консультация специалиста" />Консультация специалиста</li>
+                    <li class="hvr-wobble-top services__tab-js" data-services="2"><img class="services__img" src="img/content/documents.png" alt="Оформление документов" />Оформление документов</li>
+                    <li class="hvr-wobble-top services__tab-js" data-services="3"><img class="services__img" src="img/content/receiving.png" alt="Получение сертификата" />Получение сертификата</li>
                 </ul>
-                <div class="services__content services__content-js">
+                <div class="services__content services__content-js wow fadeInDown">
                     <div class="services__tab-container services__tab-container-active services__tab-container-js" data-tab="1"> Задача организации, в особенности же высокотехнологичная концепция общественной системы требует определения и уточнения существующий финансовых и административных условий. Следует отметить, что курс на социально-ориентированный национальный проект требует анализа прогресса профессионального общества. Прежде всего выбранный нами инновационный путь позволяет оценить значение представляет собой интересный эксперимент укрепления демократической системы.</div>
                     <div class="services__tab-container services__tab-container-js" data-tab="2"> Не вызывает сомнений, что повышение уровня гражданского сознания создаёт предпосылки качественно новых шагов для существующий финансовых и административных условий. Не следует, однако, забывать, что постоянное информационно-пропогандистское обеспечение нашей деятельности требует анализа соответствующих условий активизации. Для современного мира выбранный нами инновационный путь обеспечивает широкому кругу специалистов системы массового участия.</div>
                     <div class="services__tab-container services__tab-container-js" data-tab="3"> Разнообразный и богатый опыт высокотехнологичная концепция общественной системы создаёт предпосылки качественно новых шагов для существующий финансовых и административных условий. Разнообразный и богатый опыт понимание сущности ресурсосберегающих технологий позволяет выполнять важные задания по разработке позиции, занимаемых участниками в отношении поставленных задач. Таким образом социально-экономическое развитие обеспечивает актуальность направлений прогрессивного развития.</div>
                 </div>
             </section>
             <section class="about">
-                <h2>О компании<div class="about__icons">
+                <h2 class="wow fadeInDown" data-wow-delay=".5s">О компании<div class="about__icons">
                         <ul class="swiper-wrapper">
-                            <li class="swiper-slide hvr-wobble-top"> <img class="about__img" src="img/content/laboratory.png" alt="Лаборатория" />Собственная лаборатория</li>
-                            <li class="swiper-slide hvr-wobble-top"> <img class="about__img" src="img/content/dogovor.png" alt="Договор" />Работаем по договору</li>
-                            <li class="swiper-slide hvr-wobble-top"> <img class="about__img" src="img/content/delivery.png" alt="Доставка" />Бесплатная доставка документов по РФ</li>
-                            <li class="swiper-slide hvr-wobble-top"> <img class="about__img" src="img/content/shopping-cart.png" alt="Без хлопот" />Без лишних хлопот (достаточно Вашей заявки)</li>
-                            <li class="swiper-slide hvr-wobble-top"> <img class="about__img" src="img/content/quick.png" alt="Быстро" />БЫСТРО (срок изготовления сертификата от 1 дня)</li>
-                            <li class="swiper-slide hvr-wobble-top"> <img class="about__img" src="img/content/gift.png" alt="Подарок" />При заказе сертификата ИСО — ИНСПЕКЦИОННЫЙ КОНТРОЛЬ В ПОДАРОК</li>
+                            <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1s"> <img class="about__img" src="img/content/laboratory.png" alt="Лаборатория" />Собственная лаборатория</li>
+                            <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1.2s"> <img class="about__img" src="img/content/dogovor.png" alt="Договор" />Работаем по договору</li>
+                            <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1.4s"> <img class="about__img" src="img/content/delivery.png" alt="Доставка" />Бесплатная доставка документов по РФ</li>
+                            <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1.6s"> <img class="about__img" src="img/content/shopping-cart.png" alt="Без хлопот" />Без лишних хлопот (достаточно Вашей заявки)</li>
+                            <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1.8s"> <img class="about__img" src="img/content/quick.png" alt="Быстро" />БЫСТРО (срок изготовления сертификата от 1 дня)</li>
+                            <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="2s"> <img class="about__img" src="img/content/gift.png" alt="Подарок" />При заказе сертификата ИСО — ИНСПЕКЦИОННЫЙ КОНТРОЛЬ В ПОДАРОК</li>
                         </ul>
                     </div>
                 </h2>
-                <div class="about__text"><button class="about__button about__button-js">Раскрыть текст</button>
+                <div class="about__text wow fadeInDown"> <button class="about__button about__button-js">Раскрыть текст</button>
                     <p>Центр сертификации продукции «ИНСАЙТ» — крупнейшая сертификационная компания, работающая на рынке предоставления сертификационных услуг уже более десяти лет. За долгие годы работы мы смогли сформировать целую систему оказания содействия при получении разрешительной документации во всех областях оценки качества товаров и услуг в России и за ее пределами.</p>
                     <p>Принцип работы центра сертификации продукции «ИНСАЙТ» базируется на основных потребностях клиентов: удобство, скорость работы и профессионализм. Именно поэтому мы можем гарантировать нашим заказчикам быстрое получение документов, которые оформлены и зарегистрированы в соответствии с законодательством Российской Федерации и Таможенного союза.</p>
                     <p>Центр сертификации «ИНСАЙТ» проводит оценку соответствия продукции по следующим направлениям:</p>
@@ -97,25 +98,25 @@
                 </div>
             </section>
             <section class="clients">
-                <h2>Наши партнёры</h2>
+                <h2 class="wow fadeInDown" data-wow-delay=".5s">Наши партнёры</h2>
                 <ul class="swiper-wrapper">
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/scorostroy.png" alt="Скорострой" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/pervayaarmaturnaya.jpg" alt="Первая арматурная компания" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/sovremennaya-mehanika.png" alt="Современная механика" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/ozmk.jpg" alt="ОЗМК" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/centrstroy.jpg" alt="Центрстрой" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/stroyalians.jpg" alt="СтройАльянс" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/vidgof.jpg" alt="Видгоф" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/chelabinskiy.jpg" alt="Челябинский кузнечно-прессовый завод" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/energolider.jpg" alt="Энерголидер" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/rusproject.jpg" alt="Руспроект" /></li>
-                    <li class="swiper-slide hvr-wobble-top"> <img src="img/content/pizza.jpg" alt="Пиццалайф" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1s"> <img src="img/content/scorostroy.png" alt="Скорострой" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1.2s"> <img src="img/content/pervayaarmaturnaya.jpg" alt="Первая арматурная компания" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1.4s"> <img src="img/content/sovremennaya-mehanika.png" alt="Современная механика" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1.6s"> <img src="img/content/ozmk.jpg" alt="ОЗМК" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="1.8s"> <img src="img/content/centrstroy.jpg" alt="Центрстрой" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="2s"> <img src="img/content/stroyalians.jpg" alt="СтройАльянс" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="2.2s"> <img src="img/content/vidgof.jpg" alt="Видгоф" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="2.4s"> <img src="img/content/chelabinskiy.jpg" alt="Челябинский кузнечно-прессовый завод" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="2.6s"> <img src="img/content/energolider.jpg" alt="Энерголидер" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="2.8s"> <img src="img/content/rusproject.jpg" alt="Руспроект" /></li>
+                    <li class="wow fadeInDown swiper-slide hvr-wobble-top" data-wow-delay="3s"> <img src="img/content/pizza.jpg" alt="Пиццалайф" /></li>
                 </ul>
             </section>
             <section class="sertificats">
-                <h2>Сертификаты и лицензии</h2>
+                <h2 class="wow fadeInDown" data-wow-delay=".5s">Сертификаты и лицензии</h2>
                 <div class="sertificats__container">
-                    <ul class="swiper-wrapper">
+                    <ul class="wow fadeInDown swiper-wrapper" data-wow-delay="1s">
                         <li class="swiper-slide hvr-pulse"><img src="img/content/sert-sootvetstvia.jpg" alt="сертификат соответствия" />сертификат соответствия</li>
                         <li class="swiper-slide hvr-pulse"><img src="img/content/declaration-sootv.jpg" alt="Декларация соответствия" />Декларация соответствия</li>
                         <li class="swiper-slide hvr-pulse"><img src="img/content/3.jpg" alt="Сертификат соответствия ТР и ТС" />Сертификат соответствия ТР и ТС</li>
@@ -140,13 +141,13 @@
                 </div>
             </section>
             <section class="contacts">
-                <h2>Контакты</h2>
+                <h2 class="wow fadeInDown">Контакты</h2>
                 <div class="contacts__container">
                     <div class="contacts__left">
-                        <p>Телефон:</p><a href="tel:88005053953">8 (800) 505-3953</a><a href="tel:89132153140">8 (913) 215-3140</a>
+                        <p>Телефон:</p><a class="wow fadeInLeft" href="tel:88005053953" data-wow-delay=".2s">8 (800) 505-3953</a><a class="wow fadeInLeft" href="tel:89132153140" data-wow-delay=".3s">8 (913) 215-3140</a>
                         <p>E-mail:</p><a href="mailto:fm_s@mail.ru">fm_s@mail.ru</a>
                     </div>
-                    <div class="contacts__form">
+                    <div class="contacts__form wow fadeInRight">
                         <form class="modal__form modal__form-js" action="#" method="post"></form>
                         <h3 class="form__title">Напишите свой вопрос и я напишу или перезвоню вам.</h3>
                         <div class="form__placeholder-container"><input type="text" placeholder=" " required="required" /><label>Наименование продукции</label></div>
@@ -177,10 +178,10 @@
             <div class="content">
                 <div class="footer__container">
                     <ul class="footer__navigation">
-                        <li class="footer__navigation-item"><a href="#program">Главная</a></li>
-                        <li class="footer__navigation-item"><a href="#teachers">О компании</a></li>
-                        <li class="footer__navigation-item"><a href="#employment">Наши услуги</a></li>
-                        <li class="footer__navigation-item"><a href="#reviews">Контакты </a></li>
+                        <li class="footer__navigation-item wow fadeInDown" data-wow-delay=".4s"> <a href="index.html">Главная</a></li>
+                        <li class="footer__navigation-item wow fadeInDown" data-wow-delay=".6s"> <a href="about.html">О компании</a></li>
+                        <li class="footer__navigation-item wow fadeInDown" data-wow-delay=".8s"> <a href="uslugi.html">Наши услуги</a></li>
+                        <li class="footer__navigation-item wow fadeInDown" data-wow-delay="1s"> <a href="contacts.html">Контакты </a></li>
                     </ul>
-                    <div class="header__callme">
-                        <p>Свяжитесь с нами:</p><a href="tel:88005053953">8 (800) 505-3953 <span>(бесплатный звонок)<span></a><a href="tel:89132153140">8 (913) 215-3140</a><a href="mailto:fm_s@mail.ru">fm_s@mail.ru</a></div></div><div class="footer__bottom-container">   <a class="hvr-icon-wobble-horizontal" href="">Политика конфиденциальности</a><a href="https://github.com/Ravil377">Разработка сайта</a></div></div></div></footer><script src="js/custom.js"></script></body></html>
+                    <div class="header__callme wow fadeInDown" data-wow-delay="1.2s">
+                        <p>Свяжитесь с нами:</p><a href="tel:88005053953">8 (800) 505-3953 <span>(бесплатный звонок)<span></a><a href="tel:89132153140">8 (913) 215-3140</a><a href="mailto:fm_s@mail.ru">fm_s@mail.ru</a></div></div><div class="footer__bottom-container">   <a class="hvr-icon-wobble-horizontal" href="">Политика конфиденциальности</a><a href="https://github.com/Ravil377">Разработка сайта</a></div></div></div></footer><script src="libs/wow.min.js"></script><script src="js/custom.js"></script></body></html>
