fix contacts uslugi

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="contacts__form wow fadeInRight">
                         <form class="modal__form modal__form-js" action="#" method="post"></form>
-                        <h3 class="form__title">Напишите свой вопрос и я напишу или перезвоню вам.</h3>
+                        <h3 class="form__title">Напишите свой вопрос, мы свяжемся с вами в ближайшее время.</h3>
                         <div class="form__placeholder-container"><input type="text" placeholder=" " required="required" /><label>Наименование продукции</label></div>
                         <div class="form__placeholder-container"><input type="email" placeholder=" " required="required" /><label>Email</label></div>
                         <div class="form__placeholder-container"><input type="tel" placeholder=" " required="required" /><label>Ваш телефон</label></div>
