fix, add slider

--- a/uslugi.html
+++ b/uslugi.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="libs/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -744,4 +745,4 @@
                         <li class="footer__navigation-item wow fadeInDown" data-wow-delay="1s"> <a href="contacts.html">Контакты </a></li>
                     </ul>
                     <div class="header__callme wow fadeInDown" data-wow-delay="1.2s">
-                        <p>Свяжитесь с нами:</p><a href="tel:88005053953">8 (800) 505-3953 <span>(бесплатный звонок)<span></a><a href="tel:89132153140">8 (913) 215-3140</a><a href="mailto:fm_s@mail.ru">fm_s@mail.ru</a></div></div><div class="footer__bottom-container">   <a class="hvr-icon-wobble-horizontal" href="">Политика конфиденциальности</a><a href="https://github.com/Ravil377">Разработка сайта</a></div></div></div></footer><script src="libs/wow.min.js"></script><script src="js/custom.js"></script></body></html>
+                        <p>Свяжитесь с нами:</p><a href="tel:88005053953">8 (800) 505-3953 <span>(бесплатный звонок)<span></a><a href="tel:89132153140">8 (913) 215-3140</a><a href="mailto:fm_s@mail.ru">fm_s@mail.ru</a></div></div><div class="footer__bottom-container">   <a class="hvr-icon-wobble-horizontal" href="">Политика конфиденциальности</a><a href="https://github.com/Ravil377">Разработка сайта</a></div></div></div></footer><script src="libs/wow.min.js"></script><script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script><script src="js/custom.js"></script></body></html>
