--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="libs/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -54,6 +55,41 @@
     </header>
     <main class="main">
         <div class="container">
+            <section class="slider-main">
+                <ul class="swiper-wrapper">
+                    <li class="swiper-slide">
+                        <div class="slider-main__left">
+                            <h2>Сертификация услуг. Антикризисные цены!</h2><button class="button button-js">Заказать услугу</button>
+                        </div>
+                        <div class="slider-main__right"><img src="img/content/20.jpg" alt="Сертификация услуг" /></div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="slider-main__left">
+                            <h2>Сертификация продукции. Бесплатные консультации!</h2><button class="button button-js">Заказать услугу</button>
+                        </div>
+                        <div class="slider-main__right"><img src="img/content/5.jpg" alt="Сертификация услуг" /></div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="slider-main__left">
+                            <h2>Помощь в получении сертификата соответствия от 4000 рублей!</h2><button class="button button-js">Заказать услугу</button>
+                        </div>
+                        <div class="slider-main__right"><img src="img/content/8.jpg" alt="Сертификация услуг" /></div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="slider-main__left">
+                            <h2>Сертификация от 1 дня! </h2><button class="button button-js">Заказать услугу</button>
+                        </div>
+                        <div class="slider-main__right"><img src="img/content/10.jpg" alt="Сертификация услуг" /></div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="slider-main__left">
+                            <h2>Мы знаем что Вам нужно!</h2><button class="button button-js">Заказать услугу</button>
+                        </div>
+                        <div class="slider-main__right"><img src="img/content/16.jpg" alt="Сертификация услуг" /></div>
+                    </li>
+                </ul>
+                <div class="swiper-pagination"></div>
+            </section>
             <section class="services">
                 <h2 class="wow fadeInDown" data-wow-delay=".5s">Основные услуги</h2>
                 <ul class="wow fadeInDown services__tabs-js" data-wow-delay="1s">
@@ -184,4 +220,4 @@
                         <li class="footer__navigation-item wow fadeInDown" data-wow-delay="1s"> <a href="contacts.html">Контакты </a></li>
                     </ul>
                     <div class="header__callme wow fadeInDown" data-wow-delay="1.2s">
-                        <p>Свяжитесь с нами:</p><a href="tel:88005053953">8 (800) 505-3953 <span>(бесплатный звонок)<span></a><a href="tel:89132153140">8 (913) 215-3140</a><a href="mailto:fm_s@mail.ru">fm_s@mail.ru</a></div></div><div class="footer__bottom-container">   <a class="hvr-icon-wobble-horizontal" href="">Политика конфиденциальности</a><a href="https://github.com/Ravil377">Разработка сайта</a></div></div></div></footer><script src="libs/wow.min.js"></script><script src="js/custom.js"></script></body></html>
+                        <p>Свяжитесь с нами:</p><a href="tel:88005053953">8 (800) 505-3953 <span>(бесплатный звонок)<span></a><a href="tel:89132153140">8 (913) 215-3140</a><a href="mailto:fm_s@mail.ru">fm_s@mail.ru</a></div></div><div class="footer__bottom-container">   <a class="hvr-icon-wobble-horizontal" href="">Политика конфиденциальности</a><a href="https://github.com/Ravil377">Разработка сайта</a></div></div></div></footer><script src="libs/wow.min.js"></script><script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script><script src="js/custom.js"></script></body></html>
