--- a/index.html
+++ b/index.html
@@ -91,16 +91,27 @@
                 <div class="swiper-pagination"></div>
             </section>
             <section class="services">
-                <h2 class="wow fadeInDown" data-wow-delay=".5s">Основные услуги</h2>
+                <h2 class="wow fadeInDown" data-wow-delay=".5s">3 шага к получению сертификата</h2>
                 <ul class="wow fadeInDown services__tabs-js" data-wow-delay="1s">
                     <li class="hvr-wobble-top services__tab-js" data-services="1"><img class="services__img" src="img/content/consultation.png" alt="Консультация специалиста" />Консультация специалиста</li>
                     <li class="hvr-wobble-top services__tab-js" data-services="2"><img class="services__img" src="img/content/documents.png" alt="Оформление документов" />Оформление документов</li>
                     <li class="hvr-wobble-top services__tab-js" data-services="3"><img class="services__img" src="img/content/receiving.png" alt="Получение сертификата" />Получение сертификата</li>
                 </ul>
                 <div class="services__content services__content-js wow fadeInDown">
-                    <div class="services__tab-container services__tab-container-active services__tab-container-js" data-tab="1"> Задача организации, в особенности же высокотехнологичная концепция общественной системы требует определения и уточнения существующий финансовых и административных условий. Следует отметить, что курс на социально-ориентированный национальный проект требует анализа прогресса профессионального общества. Прежде всего выбранный нами инновационный путь позволяет оценить значение представляет собой интересный эксперимент укрепления демократической системы.</div>
-                    <div class="services__tab-container services__tab-container-js" data-tab="2"> Не вызывает сомнений, что повышение уровня гражданского сознания создаёт предпосылки качественно новых шагов для существующий финансовых и административных условий. Не следует, однако, забывать, что постоянное информационно-пропогандистское обеспечение нашей деятельности требует анализа соответствующих условий активизации. Для современного мира выбранный нами инновационный путь обеспечивает широкому кругу специалистов системы массового участия.</div>
-                    <div class="services__tab-container services__tab-container-js" data-tab="3"> Разнообразный и богатый опыт высокотехнологичная концепция общественной системы создаёт предпосылки качественно новых шагов для существующий финансовых и административных условий. Разнообразный и богатый опыт понимание сущности ресурсосберегающих технологий позволяет выполнять важные задания по разработке позиции, занимаемых участниками в отношении поставленных задач. Таким образом социально-экономическое развитие обеспечивает актуальность направлений прогрессивного развития.</div>
+                    <div class="services__tab-container services__tab-container-active services__tab-container-js" data-tab="1">
+                        <p>Наши специалисты помогут разобраться, требуется ли какой-либо разрешительный документ для производства и реализации продукции, также определят необходимость сертификации товаров, услуг. Помогут быстро собрать документы, необходимые для оформления сертификата.</p>
+                    </div>
+                    <div class="services__tab-container services__tab-container-js" data-tab="2">
+                        <p>Как оформить сертификат на продукцию или предприятие за 3 шага!</p>
+                        <p><span>1 шаг.</span> Заполнить официальную заявку и выслать в наш центр по сертификации на эл. почту <a href="mailto:fm_s@mail.ru">fm_s@mail.ru</a></p><a href="/files/Zayavka-na-sertifikatsiyu-edinaya.doc" download>Заявка на сертификат единая</a>
+                        <a href="/files/Uprashhenaya-zayavka.docx" download>Заявка на сертификат на просчет</a>
+                        <p><span>2 шаг.</span> Рассмотрев заявку, специалист центра определит стоимость, сроки изготовления и к какому виду сертификации будет подлежать Ваша продукция. Возможен звонок менеджера для уточнения данных.</p>
+                        <p><span>3 шаг.</span> Заключение договора, проверка правильности данных на сертификате и отправка его в печать!</p>
+                        <p>Если потребуется проведение лабораторных исследований, то Ваш менеджер обязательно Вас уведомит.</p>
+                    </div>
+                    <div class="services__tab-container services__tab-container-js" data-tab="3">
+                        <p>Готовый сертификат мы отправим вам бесплатно в любую точку России.</p>
+                    </div>
                 </div>
             </section>
             <section class="about">
